# painlessly_serde

./: Cargo.toml  README.md
src/: lib.rs
src/data_location/: mod.rs
src/schema_definition/: mod.rs
