[package]
name = "painlessly_serde"
version = "0.1.0"
authors = ["Josh <me@joshbooks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "0.9.0", features = ["serde"] }
url = { version = "2.1.0", features = ["serde"] }
log = { version = "0.4.8" }
